# indigo

./: Cargo.toml  Justfile  README.md
indigo/: Cargo.toml
indigo-macros/: Cargo.toml
indigo-macros/src/: logger.rs  path.rs  sync.rs
indigo-proc-macros/src/: future.rs  lib.rs
indigo/src/: derive.rs  runtime.rs  sync.rs
indigo/src/fs/: watch.rs
indigo/src/future/: join.rs  race.rs
indigo/src/runtime/: logger.rs  task.rs
indigo/src/sync/: channel.rs  request.rs
macros/: Cargo.toml
macros/src/: fail.rs  idn.rs  lib.rs  log.rs  path.rs  sync.rs
proc-macros/: Cargo.toml
proc-macros/src/: from_idn.rs  future.rs  lib.rs  prelude.rs  runtime.rs
proc-macros/src/from_idn/: attr.rs  gen.rs  input.rs  spec.rs
src/: cli.rs  collections.rs  derive.rs  encoding.rs  env.rs  fail.rs  fmt.rs  fs.rs  future.rs  graphics.rs  iter.rs  lib.rs  log.rs  math.rs  postgres.rs  prelude.rs  random.rs  runtime.rs  stream.rs  symbol.rs  sync.rs  task.rs  thread.rs  time.rs  unique_id.rs  uuid.rs
src/encoding/: base32.rs  base64.rs  idn.rs
src/encoding/idn/: ctx.rs  error.rs  from_idn.rs  lex.rs  reader.rs  span.rs  syn.rs
src/encoding/idn/syn/: declaration.rs  element.rs  group.rs  list.rs  number.rs  string.rs  symbol.rs  token.rs  tokens.rs  word.rs
src/fmt/: describe.rs
src/fs/: path.rs  utils.rs  watch.rs
src/future/: buffered.rs  join.rs  race.rs
src/graphics/: alloc.rs  backend.rs  buffer.rs  descriptor.rs  device.rs  image.rs  mesh.rs  prelude.rs  renderer.rs  surface.rs
src/graphics/renderer/: cache.rs  canvas.rs  render.rs
src/graphics/renderer/canvas/: pipeline.rs  shaders.rs
src/graphics/renderer/canvas/shaders/: canvas.vert  canvas.vert.spv
src/math/: matrix.rs  vector.rs
src/runtime/: event_loop.rs  logger.rs  task.rs  window.rs
src/sync/: atomic.rs  blocking.rs  channel.rs  request.rs  semaphore.rs
src/time/: date.rs  duration.rs  zone.rs
structopt/: Cargo.toml
structopt/structopt-derive/: Cargo.toml
structopt/structopt-derive/src/: attrs.rs  lib.rs
