[package]
authors = ["Lexi Frydl <me@lexifry.com>"]
edition = "2018"
name = "indigo"
version = "1.1.0"

[features]
default = []

cli = ["structopt"]
dotenv = ["dotenv_crate", "indigo-proc-macros/dotenv"]
event_loop = ["winit"]
fs-watch = ["notify"]
graphics = ["gfx-backend", "gfx-descriptor", "gfx-hal"]
logger = ["indigo-proc-macros/logger", "log_crate"]
idn = ["unicode-xid"]
postgres = ["bytes", "native-tls", "postgres-native-tls", "tokio-compat", "tokio-postgres"]
tokio-compat = ["tokio/rt-threaded"]
window = ["event_loop"]

[dependencies]
arrayvec = "0.5"
async-channel = "1.4"
async-executor = "0.1"
async-io = "0.1"
base64 = "0.12"
blocking = "0.5"
chrono = "0.4"
chrono-tz = "0.5"
console = "0.12"
dashmap = "3.11"
derive_more = "0.99"
easy-parallel = "3.1"
event-listener = "2.3"
futures-lite = "0.1"
glob = "0.3"
im = "15.0"
indigo-macros = { path = "macros" }
indigo-proc-macros = { path = "proc-macros" }
itertools = "0.9"
num_cpus = "1.13"
num-traits = "0.2"
once_cell = { version = "1.3", features = ["parking_lot"] }
parking_lot = "0.11"
parse_duration = "2.1"
rand = "0.7"
rand_xoshiro = "0.4"
serde = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

dotenv_crate = { package = "dotenv", version = "0.15", optional = true }
gfx-descriptor = { version = "0.2", optional = true }
gfx-hal = { version = "0.6", optional = true }
log_crate = { package = "log", version = "0.4", features = ["std"], optional = true }
notify = { version = "4.0", optional = true }
structopt = { git = "https://gitlab.com/lexifry/structopt-exportable", optional = true }
tokio = { version = "0.2", optional = true }
unicode-xid = { version = "0.2", optional = true }
winit = { version = "0.22", optional = true }

bytes = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.3", optional = true }
tokio-postgres = { version = "0.5", optional = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }

[target.'cfg(target_os = "linux")'.dependencies]
gfx-backend = { version = "0.6", features = ["x11", "xcb"], optional = true, package = "gfx-backend-vulkan" }

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend = { version = "0.6", optional = true, package = "gfx-backend-metal" }

[target.'cfg(target_os = "windows")'.dependencies]
gfx-backend = { version = "0.6", optional = true, package = "gfx-backend-dx12" }
