[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "A framework and utility library for modern applications."
edition = "2018"
name = "indigo"
license = "MPL-2.0"
repository = "https://gitlab.com/alexfrydl/indigo"
version = "0.2.0-pre"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["logger", "runtime"]

dotenv = ["dotenv_crate", "indigo-proc-macros/dotenv"]
fs-watch = ["notify"]
graphics = ["gfx-backend", "gfx-descriptor", "gfx-hal"]
idn = ["unicode-xid"]
logger = ["indigo-proc-macros/logger"]
postgres = ["bytes", "native-tls", "postgres-native-tls", "tokio-compat", "tokio-postgres"]
runtime = ["async-executor", "async-io", "easy-parallel", "num_cpus"]
tokio-compat = ["tokio/rt-threaded"]
window = ["runtime", "winit"]

[dependencies]
arrayvec = "0.5"
async-channel = "1"
base64 = "0.12"
blocking = "0.5"
chrono = "0.4"
chrono-tz = "0.5"
console = "0.12"
dashmap = "3"
derive_more = "0.99"
event-listener = "2"
futures-lite = "0.1"
glob = "0.3"
im = "15"
indigo-macros = { version = "0.1", path = "macros" }
indigo-proc-macros = { version = "0.1", path = "proc-macros" }
itertools = "0.9"
log_crate = { package = "log", version = "0.4", features = ["std"] }
num-traits = "0.2"
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = "0.11"
parse_duration = "2"
rand = "0.7"
rand_xoshiro = "0.4"
serde = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

async-executor = { version = "0.1", optional = true }
async-io = { version = "0.1", optional = true }
dotenv_crate = { package = "dotenv", version = "0.15", optional = true }
easy-parallel = { version = "3", optional = true }
gfx-descriptor = { version = "0.2", optional = true }
gfx-hal = { version = "0.6", optional = true }
notify = { version = "4", optional = true }
num_cpus = { version = "1", optional = true }
tokio = { version = "0.2", optional = true }
unicode-xid = { version = "0.2", optional = true }
winit = { version = "0.22", optional = true }

bytes = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.3", optional = true }
tokio-postgres = { version = "0.5", optional = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }

[target.'cfg(target_os = "linux")'.dependencies]
gfx-backend = { version = "0.6", features = ["x11", "xcb"], optional = true, package = "gfx-backend-vulkan" }

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend = { version = "0.6", optional = true, package = "gfx-backend-metal" }

[target.'cfg(target_os = "windows")'.dependencies]
gfx-backend = { version = "0.6", optional = true, package = "gfx-backend-dx12" }
