[package]
authors = ["Lexi Frydl <me@lexifry.com>"]
edition = "2018"
name = "indigo-proc-macros"
version = "0.1.0"

[lib]
proc-macro = true

[features]
default = []
dotenv = []
logger = []

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
quote = "1.0"
proc-macro-error = "0.4"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
Inflector = "0.11.4"
